# notification_app_rust

./: Cargo.toml  Dockerfile.ubuntu20.04  Makefile  README.md
.github/workflows/: rust.yml
notification_app_api/: Cargo.toml
notification_app_api/src/: app.rs  errors.rs  lib.rs  routes.rs
notification_app_bot/: Cargo.toml
notification_app_bot/src/: failure_count.rs  lib.rs  telegram_bot.rs
notification_app_lib/: Cargo.toml
notification_app_lib/src/: config.rs  lib.rs  ses_client.rs
scripts/: Dockerfile  openapi.yaml
src/: notification_app_api.rs  notification_app_bot.rs  send_to_email.rs  send_to_telegram.rs
tests/data/: test_api_tokens.toml
