[package]
name = "notification_app_rust"
version = "0.2.4"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "notification-app-rust"
priority = "optional"
section = "rust"
provides = "notification-app-rust"
extended-description = """\
Notification service."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notification_app_api = {path="notification_app_api"}
notification_app_bot = {path="notification_app_bot"}
notification_app_lib = {path="notification_app_lib"}
anyhow = "1.0"
structopt = "0.3"
tokio = {version="1.6", features=["full"]}
stack-string = "0.3"
reqwest = {version = "0.11", features=["cookies", "rustls-tls", "gzip", "json"]}

[workspace]
members = [
    "notification_app_bot",
    "notification_app_lib",
    "notification_app_api",
]

[[bin]]
name = "send-to-telegram"
path = "src/send_to_telegram.rs"
doc = false

[[bin]]
name = "send-to-email"
path = "src/send_to_email.rs"
doc = false

[[bin]]
name = "notification-app-api"
path = "src/notification_app_api.rs"
doc = false
