[package]
name = "notification_app_rust"
version = "0.4.5"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "notification-app-rust"
priority = "optional"
section = "rust"
provides = "notification-app-rust"
extended-description = """\
Notification service."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = {version="1.0", features=["behavior-version-latest"]}
clap = {version="4.0", features=["derive"]}
notification_app_api = {path="notification_app_api"}
notification_app_bot = {path="notification_app_bot"}
notification_app_lib = {path="notification_app_lib"}
reqwest = {version = "0.11", features=["cookies", "rustls-tls", "gzip", "json"], default_features=false}
stack-string = "0.8"
tokio = {version="1.34", features=["rt", "macros", "rt-multi-thread"]}

[workspace]
members = [
    "notification_app_bot",
    "notification_app_lib",
    "notification_app_api",
]

[[bin]]
name = "send-to-telegram"
path = "src/send_to_telegram.rs"
doc = false

[[bin]]
name = "send-to-email"
path = "src/send_to_email.rs"
doc = false

[[bin]]
name = "notification-app-api"
path = "src/notification_app_api.rs"
doc = false
