[package]
name = "notification_app_api"
version = "0.2.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notification_app_lib = {path = "../notification_app_lib"}
notification_app_bot = {path = "../notification_app_bot"}
rweb = {version="0.12", features=["openapi"]}
deadqueue = "0.2"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
http = "0.2"
log = "0.4"
indexmap = "1.6"
serde = {version="1.0", features=["derive"]}
stack-string = { version="0.2", features=["rweb-openapi"] }
tokio = {version="1.6", features=["full"]}
