[package]
name = "notification_app_api"
version = "0.4.9"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deadqueue = "0.2"
log = "0.4"
notification_app_lib = {path = "../notification_app_lib"}
notification_app_bot = {path = "../notification_app_bot"}
rweb = {version="0.15", features=["openapi"]}
serde = {version="1.0", features=["derive"]}
stack-string = { version="0.8", features=["rweb-openapi"] }
thiserror = "2.0"
tokio = {version="1.42", features=["rt", "macros", "rt-multi-thread"]}
