[package]
name = "notification_app_api"
version = "0.5.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.8"
axum-extra = {version="0.10", features=["cookie"]}
deadqueue = "0.2"
env_logger = "0.11"
log = "0.4"
maplit = "1.0"
mime = "0.3"
notification_app_lib = {path = "../notification_app_lib"}
notification_app_bot = {path = "../notification_app_bot"}
serde = {version="1.0", features=["derive"]}
stack-string = { version="1.1", features=["utoipa_types", "axum_types"] }
thiserror = "2.0"
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
utoipa = { version = "5.3", features = ["axum_extras", "yaml", "time", "uuid", "smallvec", "url", "openapi_extensions", "decimal"] }
utoipa-helper = "0.1"
utoipa-axum = { version = "0.2" }
serde_json = "1.0"
serde_yml = "0.0.12"

[dev-dependencies]
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls"], default-features=false}