[package]
name = "notification_app_bot"
version = "0.2.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.6", features=["full"]}
lazy_static = "1.4"
anyhow = "1.0"
deadqueue = "0.2"
futures = "0.3"
log = "0.4"
tokio-stream = "0.1"
notification_app_lib = {path = "../notification_app_lib"}
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.7.3"}
stack-string = "0.2"
