[package]
name = "notification_app_bot"
version = "0.5.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deadqueue = "0.2"
futures = "0.3"
log = "0.4"
notification_app_lib = {path = "../notification_app_lib"}
once_cell = "1.0"
stack-string = "1.1"
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.9.0-4", default-features=false}
tokio = {version="1.42", features=["rt", "macros", "rt-multi-thread"]}
tokio-stream = "0.1"
