[package]
name = "notification_app_lib"
version = "0.4.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
anyhow = "1.0"
envy = "0.4"
dirs = "5.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
url = "2.2"
derive_more = "0.99"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
toml = "0.8"
tokio = {version="1.21", features=["full"]}
aws-config = {version="1.0", features=["behavior-version-latest"]}
aws-sdk-ses = "1.1"
stack-string = "0.8"

[dev-dependencies]
tempfile = "3.3"
