[package]
name = "notification_app_lib"
version = "0.4.8"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = {version="1.0", features=["behavior-version-latest"]}
aws-sdk-ses = "1.1"
derive_more = "0.99"
dirs = "5.0"
dotenv = "0.15"
envy = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
stack-string = "0.8"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.38", features=["rt", "macros", "rt-multi-thread"]}
toml = "0.8"
url = "2.2"

[dev-dependencies]
tempfile = "3.3"
