[package]
name = "notification_app_lib"
version = "0.5.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = {version="1.0", features=["behavior-version-latest"]}
aws-sdk-ses = "1.1"
derive_more = {version="2.0", features = ["full"]}
dirs = "6.0"
dotenvy = "0.15"
envy = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
stack-string = "1.1"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
toml = "0.8"
url = "2.2"

[dev-dependencies]
tempfile = "3.3"
